# noir-playground

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
app/: index.html  index.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json
src/: docker.rs  errors.rs  github.rs  main.rs  routes.rs
static/: index.html
