[package]
name = "noir-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1.33", features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["fs"] }
tempdir = "0.3.7"
async-trait = "0.1"
anyhow = "1.0"
octocrab = "0.31"
secrecy = "0.8.0"
ansi-to-html = "0.1.3"
